Tiptap upload image resize, alignment, delete issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,3 +36,10 @@ body{
 .ProseMirror p {
     margin: 0;
 }
+
+.ProseMirror img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 16px auto;
+  }
